--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": ">=5.3.3",
         "symfony/console": ">=2.5",
         "symfony/finder": ">=2.5",
-        "symfony/yaml": ">=2.5"
+        "symfony/yaml": ">=2.5",
+        "mtdowling/cron-expression": "1.0.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1"
